fixed main.c to account for change to libft

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ set(SOURCE_FILES
 		libft/incl/lst.h
 		libft/incl/mem.h
 		libft/incl/net.h
+		libft/incl/net_ping.h
 		libft/incl/num.h
-		libft/incl/ping.h
 		libft/incl/printf.h
 		libft/incl/put.h
 		libft/incl/return_types.h
