--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
-cmake_minimum_required(VERSION 3.6)
-project(traceroute)
+cmake_minimum_required(VERSION 3.10)
+project(traceroute C)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_C_STANDARD 11)
 
-set(SOURCE_FILES
+include_directories(incl)
+include_directories(libft/incl)
+
+add_executable(traceroute
 		incl/traceroute.h
 		libft/incl/bool.h
 		libft/incl/char.h
@@ -72,6 +75,7 @@ set(SOURCE_FILES
 		libft/src/mem/ft_memdel.c
 		libft/src/mem/ft_memmove.c
 		libft/src/mem/ft_memset.c
+		libft/src/net/ft_checksum.c
 		libft/src/net/ft_domtoip.c
 		libft/src/net/ft_gethstaddr.c
 		libft/src/net/ft_getifaceaddr.c
@@ -80,6 +84,7 @@ set(SOURCE_FILES
 		libft/src/net/ft_packet_header.c
 		libft/src/net/ft_setsock_timeout.c
 		libft/src/net/ft_sockoptraw.c
+		libft/src/num/ft_getpercent.c
 		libft/src/num/ft_numlen.c
 		libft/src/num/ft_timediff.c
 		libft/src/put/ft_errorexit.c
@@ -146,14 +151,12 @@ set(SOURCE_FILES
 		libft/src/tbl/ft_itbllen.c
 		libft/src/tbl/ft_tbladdl.c
 		libft/src/tbl/ft_tbldel.c
-    libft/src/tbl/ft_tbldup.c
-    libft/src/tbl/ft_tbllen.c
-    libft/src/tbl/ft_tblrepline.c
-    libft/src/tbl/ft_tblrmline.c
-    src/check_packet.c
-    src/handle_response.c
-    src/send_recv_echo.c
-    src/traceroute.c
-    main.c)
-
-add_executable(traceroute ${SOURCE_FILES})
+		libft/src/tbl/ft_tbldup.c
+		libft/src/tbl/ft_tbllen.c
+		libft/src/tbl/ft_tblrepline.c
+		libft/src/tbl/ft_tblrmline.c
+		src/check_packet.c
+		src/handle_response.c
+		src/send_recv_echo.c
+		src/traceroute.c
+		main.c)
